deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver-nfs
  namespace: static-web
  name: webserver-nfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-nfs
  template:
    metadata:
      labels:
        app: webserver-nfs
    spec:
      volumes:
        - name: nfs-volume
          nfs:
            server: sasserver.demo.sas.com
            path: /data/static
            readOnly: no
      containers:
        - image: nginx
          name: webserver-nfs
          volumeMounts:
            - name: nfs-volume
              mountPath: /usr/share/nginx/html
