service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-nfs-service
  namespace: static-web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webserver-nfs
