ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: webserver-nfs
  name: webserver-nfs
  namespace: static-web
spec:
  ingressClassName: nginx
  rules:
  - host: sasserver.demo.sas.com
    http:
      paths:
      - backend:
          service:
            name: webserver-nfs-service
            port:
              number: 80
        path: /webserver
        pathType: Prefix
